Edited README via GitHub

--- a/README
+++ b/README
@@ -4,4 +4,4 @@ USAGE
 
 python jsoncompare.py <item1> <item2>
 
-Where item1 and item2 are either a file or a url containing a JSON object.
+Where item1 and item2 are either a file or a url containing a JSON object. The compare() method can also be called as a library from other Python code, in which case item1 and item2 can also be dict or array objects.
